Implement configuration ready for device discovery
